y.output
Terminals which are not used

   COLON
   COMMA
   DOT
   LBRAC
   RBRAC
   SEMIC
   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: ProgHeading ';' ProgBlock '.'

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')'

    3 ProgBlock: VarPart FuncPart StatPart

    4 VarPart: VAR VarDeclaration ';' VarPart2
    5        | /* empty */

    6 VarPart2: VarDeclaration ';' VarPart2
    7         | /* empty */

    8 VarDeclaration: IDList ':' ID

    9 IDList: ID IDList2

   10 IDList2: ',' ID IDList2
   11        | /* empty */

   12 FuncPart: FuncPart FuncDeclaration ';'
   13         | /* empty */

   14 FuncDeclaration: FuncHeading ';' FORWARD
   15                | FuncIdent ';' FuncBlock
   16                | FuncHeading ';' FuncBlock

   17 FuncHeading: FUNCTION ID ':' ID
   18            | FUNCTION ID FormalParamList ':' ID

   19 FuncIdent: FUNCTION ID

   20 FormalParamList: '(' FormalParams FormalParamListaux ')'

   21 FormalParamListaux: ';' FormalParams FormalParamListaux
   22                   | /* empty */

   23 FormalParams: IDList ':' ID
   24             | VAR IDList ':' ID

   25 FuncBlock: VarPart StatPart

   26 StatPart: CompStat

   27 CompStat: BEG StatList END

   28 StatList: Stat Stat2

   29 Stat2: ';' Stat Stat2
   30      | /* empty */

   31 Stat: CompStat
   32     | IF Expr THEN Stat
   33     | IF Expr THEN Stat ELSE Stat
   34     | WHILE Expr DO Stat
   35     | REPEAT StatList UNTIL Expr
   36     | VAL '(' PARAMSTR '(' Expr ')' ',' ID ')'
   37     | optStat2
   38     | WRITELN
   39     | WRITELN WritelnPList

   40 optStat2: ID ASSIGN Expr
   41         | /* empty */

   42 WritelnPList: '(' optWritelnPList WritelnPList2 ')'

   43 optWritelnPList: Expr
   44                | STRING

   45 WritelnPList2: ',' optWritelnPList WritelnPList2
   46              | /* empty */

   47 Expr: Expr AND Expr
   48     | Expr OR Expr
   49     | Expr OP2 Expr
   50     | Expr OP3 Expr
   51     | Expr OP4 Expr
   52     | OP3 Expr
   53     | NOT Expr
   54     | '(' Expr ')'
   55     | INTLIT
   56     | REALLIT
   57     | ID ParamList
   58     | ID

   59 ParamList: '(' Expr repParamList ')'

   60 repParamList: ',' Expr repParamList
   61             | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 20 36 42 54 59
')' (41) 2 20 36 42 54 59
',' (44) 10 36 45 60
'.' (46) 1
':' (58) 8 17 18 23 24
';' (59) 1 4 6 12 14 15 16 21 29
error (256)
OR (258) 48
OP3 (259) 50 52
AND (260) 47
OP4 (261) 51
NOT (262) 53
BEG (263) 27
ASSIGN (264) 40
COLON (265)
COMMA (266)
DO (267) 34
DOT (268)
END (269) 27
ELSE (270) 33
FORWARD (271) 14
FUNCTION (272) 17 18 19
IF (273) 32 33
LBRAC (274)
OUTPUT (275) 2
PARAMSTR (276) 36
PROGRAM (277) 2
RBRAC (278)
REPEAT (279) 35
SEMIC (280)
THEN (281) 32 33
UNTIL (282) 35
VAL (283) 36
VAR (284) 4 24
WHILE (285) 34
WRITELN (286) 38 39
OP2 (287) 49
RESERVED (288)
ID (289) 2 8 9 10 17 18 19 23 24 36 40 57 58
INTLIT (290) 55
REALLIT (291) 56
STRING (292) 44


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Program (45)
    on left: 1, on right: 0
ProgHeading (46)
    on left: 2, on right: 1
ProgBlock (47)
    on left: 3, on right: 1
VarPart (48)
    on left: 4 5, on right: 3 25
VarPart2 (49)
    on left: 6 7, on right: 4 6
VarDeclaration (50)
    on left: 8, on right: 4 6
IDList (51)
    on left: 9, on right: 8 23 24
IDList2 (52)
    on left: 10 11, on right: 9 10
FuncPart (53)
    on left: 12 13, on right: 3 12
FuncDeclaration (54)
    on left: 14 15 16, on right: 12
FuncHeading (55)
    on left: 17 18, on right: 14 16
FuncIdent (56)
    on left: 19, on right: 15
FormalParamList (57)
    on left: 20, on right: 18
FormalParamListaux (58)
    on left: 21 22, on right: 20 21
FormalParams (59)
    on left: 23 24, on right: 20 21
FuncBlock (60)
    on left: 25, on right: 15 16
StatPart (61)
    on left: 26, on right: 3 25
CompStat (62)
    on left: 27, on right: 26 31
StatList (63)
    on left: 28, on right: 27 35
Stat2 (64)
    on left: 29 30, on right: 28 29
Stat (65)
    on left: 31 32 33 34 35 36 37 38 39, on right: 28 29 32 33 34
optStat2 (66)
    on left: 40 41, on right: 37
WritelnPList (67)
    on left: 42, on right: 39
optWritelnPList (68)
    on left: 43 44, on right: 42 45
WritelnPList2 (69)
    on left: 45 46, on right: 42 45
Expr (70)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58, on right: 32 33 34
    35 36 40 43 47 48 49 50 51 52 53 54 59 60
ParamList (71)
    on left: 59, on right: 57
repParamList (72)
    on left: 60 61, on right: 59 60


state 0

    0 $accept: . Program $end

    PROGRAM  shift, and go to state 1

    Program      go to state 2
    ProgHeading  go to state 3


state 1

    2 ProgHeading: PROGRAM . ID '(' OUTPUT ')'

    ID  shift, and go to state 4


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


state 3

    1 Program: ProgHeading . ';' ProgBlock '.'

    ';'  shift, and go to state 6


state 4

    2 ProgHeading: PROGRAM ID . '(' OUTPUT ')'

    '('  shift, and go to state 7


state 5

    0 $accept: Program $end .

    $default  accept


state 6

    1 Program: ProgHeading ';' . ProgBlock '.'

    VAR  shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    ProgBlock  go to state 9
    VarPart    go to state 10


state 7

    2 ProgHeading: PROGRAM ID '(' . OUTPUT ')'

    OUTPUT  shift, and go to state 11


state 8

    4 VarPart: VAR . VarDeclaration ';' VarPart2

    ID  shift, and go to state 12

    VarDeclaration  go to state 13
    IDList          go to state 14


state 9

    1 Program: ProgHeading ';' ProgBlock . '.'

    '.'  shift, and go to state 15


state 10

    3 ProgBlock: VarPart . FuncPart StatPart

    $default  reduce using rule 13 (FuncPart)

    FuncPart  go to state 16


state 11

    2 ProgHeading: PROGRAM ID '(' OUTPUT . ')'

    ')'  shift, and go to state 17


state 12

    9 IDList: ID . IDList2

    ','  shift, and go to state 18

    $default  reduce using rule 11 (IDList2)

    IDList2  go to state 19


state 13

    4 VarPart: VAR VarDeclaration . ';' VarPart2

    ';'  shift, and go to state 20


state 14

    8 VarDeclaration: IDList . ':' ID

    ':'  shift, and go to state 21


state 15

    1 Program: ProgHeading ';' ProgBlock '.' .

    $default  reduce using rule 1 (Program)


state 16

    3 ProgBlock: VarPart FuncPart . StatPart
   12 FuncPart: FuncPart . FuncDeclaration ';'

    BEG       shift, and go to state 22
    FUNCTION  shift, and go to state 23

    FuncDeclaration  go to state 24
    FuncHeading      go to state 25
    FuncIdent        go to state 26
    StatPart         go to state 27
    CompStat         go to state 28


state 17

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')' .

    $default  reduce using rule 2 (ProgHeading)


state 18

   10 IDList2: ',' . ID IDList2

    ID  shift, and go to state 29


state 19

    9 IDList: ID IDList2 .

    $default  reduce using rule 9 (IDList)


state 20

    4 VarPart: VAR VarDeclaration ';' . VarPart2

    ID  shift, and go to state 12

    $default  reduce using rule 7 (VarPart2)

    VarPart2        go to state 30
    VarDeclaration  go to state 31
    IDList          go to state 14


state 21

    8 VarDeclaration: IDList ':' . ID

    ID  shift, and go to state 32


state 22

   27 CompStat: BEG . StatList END

    BEG      shift, and go to state 22
    IF       shift, and go to state 33
    REPEAT   shift, and go to state 34
    VAL      shift, and go to state 35
    WHILE    shift, and go to state 36
    WRITELN  shift, and go to state 37
    ID       shift, and go to state 38

    $default  reduce using rule 41 (optStat2)

    CompStat  go to state 39
    StatList  go to state 40
    Stat      go to state 41
    optStat2  go to state 42


state 23

   17 FuncHeading: FUNCTION . ID ':' ID
   18            | FUNCTION . ID FormalParamList ':' ID
   19 FuncIdent: FUNCTION . ID

    ID  shift, and go to state 43


state 24

   12 FuncPart: FuncPart FuncDeclaration . ';'

    ';'  shift, and go to state 44


state 25

   14 FuncDeclaration: FuncHeading . ';' FORWARD
   16                | FuncHeading . ';' FuncBlock

    ';'  shift, and go to state 45


state 26

   15 FuncDeclaration: FuncIdent . ';' FuncBlock

    ';'  shift, and go to state 46


state 27

    3 ProgBlock: VarPart FuncPart StatPart .

    $default  reduce using rule 3 (ProgBlock)


state 28

   26 StatPart: CompStat .

    $default  reduce using rule 26 (StatPart)


state 29

   10 IDList2: ',' ID . IDList2

    ','  shift, and go to state 18

    $default  reduce using rule 11 (IDList2)

    IDList2  go to state 47


state 30

    4 VarPart: VAR VarDeclaration ';' VarPart2 .

    $default  reduce using rule 4 (VarPart)


state 31

    6 VarPart2: VarDeclaration . ';' VarPart2

    ';'  shift, and go to state 48


state 32

    8 VarDeclaration: IDList ':' ID .

    $default  reduce using rule 8 (VarDeclaration)


state 33

   32 Stat: IF . Expr THEN Stat
   33     | IF . Expr THEN Stat ELSE Stat

    OP3      shift, and go to state 49
    NOT      shift, and go to state 50
    ID       shift, and go to state 51
    INTLIT   shift, and go to state 52
    REALLIT  shift, and go to state 53
    '('      shift, and go to state 54

    Expr  go to state 55


state 34

   35 Stat: REPEAT . StatList UNTIL Expr

    BEG      shift, and go to state 22
    IF       shift, and go to state 33
    REPEAT   shift, and go to state 34
    VAL      shift, and go to state 35
    WHILE    shift, and go to state 36
    WRITELN  shift, and go to state 37
    ID       shift, and go to state 38

    $default  reduce using rule 41 (optStat2)

    CompStat  go to state 39
    StatList  go to state 56
    Stat      go to state 41
    optStat2  go to state 42


state 35

   36 Stat: VAL . '(' PARAMSTR '(' Expr ')' ',' ID ')'

    '('  shift, and go to state 57


state 36

   34 Stat: WHILE . Expr DO Stat

    OP3      shift, and go to state 49
    NOT      shift, and go to state 50
    ID       shift, and go to state 51
    INTLIT   shift, and go to state 52
    REALLIT  shift, and go to state 53
    '('      shift, and go to state 54

    Expr  go to state 58


state 37

   38 Stat: WRITELN .
   39     | WRITELN . WritelnPList

    '('  shift, and go to state 59

    $default  reduce using rule 38 (Stat)

    WritelnPList  go to state 60


state 38

   40 optStat2: ID . ASSIGN Expr

    ASSIGN  shift, and go to state 61


state 39

   31 Stat: CompStat .

    $default  reduce using rule 31 (Stat)


state 40

   27 CompStat: BEG StatList . END

    END  shift, and go to state 62


state 41

   28 StatList: Stat . Stat2

    ';'  shift, and go to state 63

    $default  reduce using rule 30 (Stat2)

    Stat2  go to state 64


state 42

   37 Stat: optStat2 .

    $default  reduce using rule 37 (Stat)


state 43

   17 FuncHeading: FUNCTION ID . ':' ID
   18            | FUNCTION ID . FormalParamList ':' ID
   19 FuncIdent: FUNCTION ID .

    '('  shift, and go to state 65
    ':'  shift, and go to state 66

    $default  reduce using rule 19 (FuncIdent)

    FormalParamList  go to state 67


state 44

   12 FuncPart: FuncPart FuncDeclaration ';' .

    $default  reduce using rule 12 (FuncPart)


state 45

   14 FuncDeclaration: FuncHeading ';' . FORWARD
   16                | FuncHeading ';' . FuncBlock

    FORWARD  shift, and go to state 68
    VAR      shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 69
    FuncBlock  go to state 70


state 46

   15 FuncDeclaration: FuncIdent ';' . FuncBlock

    VAR  shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 69
    FuncBlock  go to state 71


state 47

   10 IDList2: ',' ID IDList2 .

    $default  reduce using rule 10 (IDList2)


state 48

    6 VarPart2: VarDeclaration ';' . VarPart2

    ID  shift, and go to state 12

    $default  reduce using rule 7 (VarPart2)

    VarPart2        go to state 72
    VarDeclaration  go to state 31
    IDList          go to state 14


state 49

   52 Expr: OP3 . Expr

    OP3      shift, and go to state 49
    NOT      shift, and go to state 50
    ID       shift, and go to state 51
    INTLIT   shift, and go to state 52
    REALLIT  shift, and go to state 53
    '('      shift, and go to state 54

    Expr  go to state 73


state 50

   53 Expr: NOT . Expr

    OP3      shift, and go to state 49
    NOT      shift, and go to state 50
    ID       shift, and go to state 51
    INTLIT   shift, and go to state 52
    REALLIT  shift, and go to state 53
    '('      shift, and go to state 54

    Expr  go to state 74


state 51

   57 Expr: ID . ParamList
   58     | ID .

    '('  shift, and go to state 75

    $default  reduce using rule 58 (Expr)

    ParamList  go to state 76


state 52

   55 Expr: INTLIT .

    $default  reduce using rule 55 (Expr)


state 53

   56 Expr: REALLIT .

    $default  reduce using rule 56 (Expr)


state 54

   54 Expr: '(' . Expr ')'

    OP3      shift, and go to state 49
    NOT      shift, and go to state 50
    ID       shift, and go to state 51
    INTLIT   shift, and go to state 52
    REALLIT  shift, and go to state 53
    '('      shift, and go to state 54

    Expr  go to state 77


state 55
